# C___4sem

./: A05.cpp  CMakeLists.txt  a.cpp  a.h  a04.cpp  a06.cpp  a07.cpp  class_constr_destr_assign.cpp  main.cpp
B/: b03.cpp
C/: c01.cpp  c02.cpp  c03.cpp  c04.cpp  c05.cpp  c06.cpp
D/: d01.cpp  d02.cpp  d03.cpp  d04.cpp
T/: t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  t06.cpp  t07.cpp  t08.cpp  t12.cpp
potok/: reverse.cpp
