cmake_minimum_required(VERSION 4.1)
project(C___4sem)

set(CMAKE_CXX_STANDARD 23)

add_executable(C___4sem main.cpp
        a.cpp
        a.h
        T/t01.cpp
        T/t05.cpp
        A05.cpp
        potok/reverse.cpp
        T/t07.cpp
        a04.cpp
        a07.cpp
        a06.cpp
        T/t12.cpp
        T/t13.cpp
        C/c01.cpp
        C/c02.cpp
        C/c03.cpp
        C/c04.cpp
        C/c05.cpp
        C/c06.cpp
        B/b03.cpp
        D/d01.cpp
        D/d02.cpp
        D/d03.cpp
        D/d04.cpp)
